# GIT-REPO

./: .env
RAGSustainability/: .dockerignore  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.debug  FIX_CONNECTION_ISSUE.md  README.md  STREAMLIT_DEPLOYMENT.md  Test_Questionss.txt  app.py  build_database.py  chunk_preview.csv  chunker.py  convert_chroma_to_faiss.py  convert_chroma_to_faiss_direct.py  create_demo_faiss.py  data_prep.py  debug_app.py  debug_deployment.sh  deploy.sh  faiss_db_metadata.pkl  fly-high-memory.toml  fly-no-healthcheck.toml  fly.toml  main.py  packages.txt  pyproject.toml  rag_chain.py  requirements.txt  requirements_backup.txt  requirements_faiss.txt  sample_questions.txt  streamlit_app.py  streamlit_app_faiss.py  test_deployment.py  vector_store.py
RAGSustainability/.streamlit/: config.toml
RAGSustainability/faiss_db/: index.faiss  index.pkl
RAGSustainability/knowledge-base/AKEPA/: B_Corp_certification.txt  Landing_page.txt
RAGSustainability/knowledge-base/A_Greener_World/: FullContent.txt
RAGSustainability/knowledge-base/Aquaculture_Stewardship_Council/: Landing_page.txt
RAGSustainability/knowledge-base/Better_Cotton/: FullContent.txt  Landing_page.txt  main_website.txt  membership_page.txt  sustainability_issues_-_pesticides.txt  sustainability_issues_-_water_stewardship.txt  sustainability_issues_-_working_conditions.txt
RAGSustainability/knowledge-base/Carbon_Trust/: FullContent.txt
RAGSustainability/knowledge-base/Clean_Clothes_Campaign/: Landing_page.txt  binding_agreements.txt  climate_change.txt  fair_contracts.txt  (+6 more)
(+229 files in other folders)
